crates/plotnik-lib/tests/02-parser/recovery_validation/category_loose_hash_rejected.txt
Q = (expression # binary_expression)
------------------ DIAGNOSTICS -------------------
error: expected a child node, or `)` to close
 --> query.ptk:1:17
  |
1 | Q = (expression # binary_expression)
  |                 ^

error: node kinds must be parenthesized
 --> query.ptk:1:19
  |
1 | Q = (expression # binary_expression)
  |                   ^^^^^^^^^^^^^^^^^
  |
help: wrap in parentheses
  |
1 - Q = (expression # binary_expression)
1 + Q = (expression # (binary_expression))
  |
